name and counters changed

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -19,9 +19,9 @@
         <div id=counters>
             <div id="numbers"> 
                 <ul>
-                    <li id="numpost"> 7</li>  
-                    <li id="numfollowing"> 100 </li> 
-                    <li id="numfollowers">250</li>
+                    <li id="numpost"> 7K</li>  
+                    <li id="numfollowing"> 10K </li> 
+                    <li id="numfollowers"> &nbsp; &nbsp; 250M</li>
                 </ul>
             </div>
             <div id="varibles">
